# dcs-simulation-engine

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  fly.toml  mkdocs.yml  pyproject.toml  pytest.ini
.devcontainer/: dev.Dockerfile  devcontainer.json
.github/workflows/: ci.yml  deploy-api.yml  deploy-widget.yml  docs.yml  publish-package.yml
analysis_notebooks/: nb_helpers.py  template.ipynb
analysis_notebooks/demo/: demo.template.ipynb  sim-state.yml
analysis_notebooks/eval-character-quality/: character-qa.ipynb
analysis_notebooks/eval-character-representative-set/: cs_with_dims.json  dimension_descriptions.json  eval-representative-set.ipynb  temp.json
analysis_notebooks/eval-graph-quality/: eval_cognitive_systems_goalscope.ipynb  eval_scene_setup.ipynb
configs/: .README.md  cli-theme.config.yml  logger-api.config.yml  logger-cli.config.yml  logger-widget.config.yml
database_seeds/: characters.json
dcs_simulation_engine/: __init__.py
dcs_simulation_engine/api/: __init__.py  deps.py  main.py  models.py  settings.py  simulations.py
dcs_simulation_engine/api/routers/: __init__.py  simulations.py
dcs_simulation_engine/api/services/: __init__.py  (+1 more)
dcs_simulation_engine/cli/: __init__.py  configuration.py  runner.py
dcs_simulation_engine/core/: __init__.py  constants.py  game_config.py  run_manager.py
dcs_simulation_engine/helpers/: database_helpers.py  game_helpers.py  logging_helpers.py  validation_helpers.py
dcs_simulation_engine/utils/: chat.py  file.py  misc.py  serde.py
dcs_simulation_engine/widget/: __init__.py  app.py  constants.py  handlers.py  helpers.py  session_state.py  state.py  widget.py  wiring.py
docs/: core_reference.md  design.md  index.md
games/: .README.md  explore.yml  explorer.yml  foresight.yml  goal-horizon.yml  infer-intent.yml  subgraph.yml  teamwork.yml  turing-test.yml
scripts/: create_player.py  deploy.py  deploy_game.py  init_new_database.py  main.py  run_api.py  run_cli.py  run_widget.py  setup_new_database.py
tests/: __init__.py  conftest.py  helpers.py
tests/_exploratory/: gradio_stream_history.py  langgraph_basic.py  langgraph_checkpoint_loops.py  langgraph_context.py  langgraph_funcargs.py  langgraph_statepassing.py  langraph_inners.py  openrouter_endpoint.py
tests/api/: test_api.py  test_api_smoketest.py
tests/cli/: test_cli.py
tests/core/: conftest.py  test_game_config.py  test_run_manager.py  test_simulation_graph.py
tests/games/: contest.py  helpers.py  test_game_explore.py  test_games_compile.py  test_games_configs_valid.py
tests/helpers/: test_database_helpers.py  test_validation_helpers.py
tests/manual/: eval-new-games-and-chars.ipynb  helpers.py  new-character.json  new-game.yml
tests/utils/: test_chat.py  test_file.py  test_serde.py
tests/web/: test_web_smoketest.py
tests/widget/: test_wiget.py
(+19 files in other folders)
