[project]
name = "dcs-simulation-engine"
version = "0.1.0"
description = "A textual environment for simulating diverse cognitive systems."
authors = [{ name = "dcs", email = "dcs@psych.gatech.edu" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]
license-files = ["LICEN[CS]E*"]

dependencies = [
  "rich (>=14.1.0,<15.0.0)",
  "langgraph (>=0.6.4,<0.7.0)",
  "loguru (>=0.7.3,<0.8.0)",
  "dotenv (>=0.9.9,<0.10.0)",
  "langchain (>=0.3.27,<0.4.0)",
  "openai (>=1.99.9,<2.0.0)",
  "langchain-openai (>=0.3.30,<0.4.0)",
  "grandalf (>=0.8,<0.9)",
  "pyyaml (>=6.0.2,<7.0.0)",
  "fastapi (>=0.116.1,<0.117.0)",
  "uvicorn[standard] (>=0.35.0,<0.36.0)",
  "pydantic (>=2.11.9,<3.0.0)",
  "pydantic-settings (>=2.10.1,<3.0.0)",
  "pymongo (>=4.15.3,<5.0.0)",
  "mnemonic (>=0.21,<0.22)",
  "gradio (>=5.49.1,<6.0.0)",
]

[project.scripts]
dcs = "scripts.main:entrypoint"
dcs-widget = "scripts.run_widget:main"

[project.urls]
Homepage = "https://github.com/diverse-cognitive-systems-group/dcs-simulation-engine"
Issues = "https://github.com/diverse-cognitive-systems-group/dcs-simulation-engine/issues"

[tool.poetry]
packages = [{ include = "dcs_simulation_engine" }]

[tool.poetry.dependencies]
poetry = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
jupyter = "^1.1.1"
ipykernel = "^6.30.1"
yamale = "^6.0.0"
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.12.10"
mypy = "^1.17.1"
types-pyyaml = "^6.0.12.20250822"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.19"
mkdocstrings = { extras = ["python"], version = "^0.30.0" }
httpx = "^0.28.1"
mongomock = "^4.3.0"

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = '''
(
  \.ipynb$                # all .ipynb files anywhere
  | ^analysis_notebooks/.*         # everything under analysis_notebooks/
)
'''

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "D",
] # Example: pycodestyle, pyflakes, import rules, docstring rules
exclude = [
  "*.ipynb",              # all notebooks
  "analysis_notebooks/*", # specific folder
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["dcs_simulation_engine", "tests"] # <— only check these
# exclude = '''
# (
#   ^notebooks/.*           # all notebooks/ and subfolders
#   | ^manual_analysis/.*    # all manual_analysis/ and subfolders
#   | ^tests/.*              # all tests/ and subfolders
#   | .*\.ipynb$             # any .ipynb files
# )
# '''

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
